--- a/MVCMuncheese/Views/Ordenes/Ordenes.cshtml
+++ b/MVCMuncheese/Views/Ordenes/Ordenes.cshtml
@@ -106,7 +106,7 @@
             //    var cantidad = $("#Cantidad").val();
             //    var tipoOrden = $("#TipoOrden").val();
             //    var mesa = $("#Mesa").val();
-            //    var descipcion = $("#Descipcion").val();
+            //    var descipcion = $("#Descripcion").val();
             //    var subtotal = precio * cantidad;
 
             //    // Crear una fila con los valores
@@ -117,7 +117,7 @@
             //        "<td>" + cantidad + "</td>" +
             //        "<td>" + tipoOrden + "</td>" +
             //        "<td>" + mesa + "</td>" +
-            //        "<td>" + descipcion + "</td>" +
+            //        "<td>" + descripcion + "</td>" +
             //        "<td>" + subtotal + "</td>" +
             //        "</tr>";
 
@@ -130,7 +130,7 @@
             //    $("#Precio").val("");
             //    $("#Cantidad").val("");
             //    $("#TipoOrden").val();
-            //    $("#Descipcion").val();
+            //    $("#Descripcion").val();
             //    $("#Mesa").val();
 
 
